--- a/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/rechercheETfiltres.html
+++ b/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/rechercheETfiltres.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Filtres avec slider</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -35,17 +34,6 @@
         <!-- Les 5 premiers filtres apparaîtront ici -->
       </div>
 
-      <!-- Slider pour les autres filtres -->
-      <!-- <div class="mt-4">
-        <div class="swiper-container">
-          <div class="swiper-wrapper" id="slider-container"> -->
-      <!-- Les autres filtres seront ajoutés ici -->
-      <!-- </div> -->
-      <!-- Flèches de navigation pour le slider -->
-      <!-- <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
-        </div>
-      </div> -->
     </div>
   </div>
 
