--- a/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/lesMasters.html
+++ b/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/lesMasters.html
@@ -15,7 +15,7 @@
   <!-- Swiper JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="./js/filtresRecherche.js"></script>
-  <title>Résultats NaMaster</title>
+  <title>masters</title>
 
 </head>
 
@@ -25,19 +25,6 @@
 </header>
 
 <body class="pt-20">
-  <!-- <div class="grid grid-cols-1 gap-4 lg:mx-10 mb-8">
-    <h1 class="font-bold text-5xl text-center lg:text-7xl">Les diffèrents Masters</h1>
-
-    <a href="#">
-      <div class="p-4 bg-gray-500 border rounded-md shadow-sm">
-        <h2 class="font-bold text-lg mb-2 lg:text-2xl">MASTER Xxxxxxxxx</h2>
-        <p class="text-sm text-gray-200 lg:text-lg">
-          Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate.
-          Orci aliquet lectus ut tristique lacus.
-        </p>
-      </div>
-    </a>
-  </div> -->
   <main class="p-6 sm:mx-8 lg:my-10">
 
     <div class="text-center">
@@ -47,7 +34,7 @@
       <div id="search-container"></div>
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:mx-8 lg:mx-10 mb-8" id="masters-container">
-      <!-- Les masters seront insérés ici -->
+      <!-- Les masters insérés ici -->
     </div>
     <div class="text-center mt-8">
       <button id="load-more" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Charger plus</button>
@@ -55,42 +42,47 @@
   </main>
 
   <script>
-
-
+    // <!-- Utiliser fetch pour récupérer le contenu du fichier rechercheETfiltres.html -->
     fetch('rechercheETfiltres.html')
       .then(response => response.text())
       .then(data => {
+        // <!-- Insérer le contenu récupéré dans l'élément avec l'ID 'search-container' -->
         document.getElementById('search-container').innerHTML = data;
       })
+      // <!-- Si une erreur se produit lors du chargement du fichier rechercheETfiltres.html, elle est capturée et affichée dans la console -->
       .catch(error => console.error('Error loading header:', error));
 
-
-    // Charger et insérer le contenu de header.html
+    // <!-- Charger et insérer le contenu de header.html -->
     fetch('header.html')
       .then(response => response.text())
       .then(data => {
+        // <!-- Insérer le contenu récupéré dans l'élément avec l'ID 'header-container' -->
         document.getElementById('header-container').innerHTML = data;
 
-        // Réexécuter le script bgMenu.js après l'injection
+        // <!-- Réexécuter le script bgMenu.js après l'injection -->
         const burgerBtn = document.getElementById('burger-btn');
         const menu = document.getElementById('menu');
 
+        // <!-- Si l'élément burger-btn existe, ajouter un écouteur d'événement pour le clic -->
         if (burgerBtn) {
           burgerBtn.addEventListener('click', () => {
+            // <!-- Basculer la classe 'hidden' sur l'élément menu pour afficher/masquer le menu -->
             menu.classList.toggle('hidden');
           });
         }
       })
+      // <!-- Si une erreur se produit lors du chargement du header, elle est capturée et affichée dans la console -->
       .catch(error => console.error('Error loading header:', error));
 
+    // <!-- Utiliser fetch pour récupérer le contenu du fichier footer.html -->
     fetch('footer.html')
       .then(response => response.text())
       .then(data => {
+        // <!-- Insérer le contenu récupéré dans l'élément avec l'ID 'footer-container' -->
         document.getElementById('footer-container').innerHTML = data;
       })
+      // <!-- Si une erreur se produit lors du chargement du footer, elle est capturée et affichée dans la console -->
       .catch(error => console.error('Error loading header:', error));
-
-
 
     document.addEventListener('DOMContentLoaded', () => {
       const mastersContainer = document.getElementById('masters-container');
@@ -108,18 +100,16 @@
       console.log("URL actuelle de la page :", pageURL);
 
       // Vérifie si "lesMasters.html" est dans l'URL de la page et si une requête ou un fragment est présent
-      if (pageURL.includes('lesMasters.html') && (pageURL.includes('?') || pageURL.includes('#'))) { // PENSER A MODIFIER 'lesMasters.html' ICI SI RÉUTILISÉ DANS 'lesEtablissements.html'
-        console.log("Il y a quelque chose après lesMasters.html.");
-
-        // DANS CE CAS, IL NOUS FAUT EXCLURE LES MASTER NON-NECESSAIRES / UNIQUEMENT CEUX DEMANDÉS :
-
+      if (pageURL.includes('lesMasters.html') && (pageURL.includes('?') || pageURL.includes('#'))) { // Vérifie si l'URL contient lesMasters.html et une requête ou un fragment
+        console.log("Il y a quelque chose après lesMasters.html.");// Si l'URL contient une requête ou un fragment, affiche un message
 
       } else {
-        console.log("Il n'y a rien après lesMasters.html.");
+        console.log("Il n'y a rien après lesMasters.html.");// Si l'URL ne contient pas de requête ou de fragment, ne rien faire
       }
 
       let currentIndex = 0; // Index actuel pour le chargement des masters
 
+      // Fonction pour créer une carte de master
       const createMasterCard = (master) => {
         const masterCard = document.createElement("div");
         masterCard.className = "p-4 bg-white border rounded-md shadow-sm";
@@ -144,20 +134,20 @@
 
         return masterCard;
       };
-
+      // Fonction pour rediriger vers la page du master
       function redirectToMaster(masterId) {
         window.location.href = `master.html?id=${masterId}`;
       }
-
+      // Fonction pour charger les masters
       const loadMasters = (count) => {
-        const nextMasters = allMasters.slice(currentIndex, currentIndex + count);
+        const nextMasters = allMasters.slice(currentIndex, currentIndex + count);// Récupère les masters suivants à afficher
         nextMasters.forEach((master) => {
-          if (master.parcours !== null) {
-            const masterCard = createMasterCard(master);
-            mastersContainer.appendChild(masterCard);
+          if (master.parcours !== null) { // Vérifie si le master a un nom
+            const masterCard = createMasterCard(master); // Crée une carte de master
+            mastersContainer.appendChild(masterCard); // Ajoute la carte au conteneur
           }
         });
-        currentIndex += count;
+        currentIndex += count; // Met à jour l'index actuel
 
         // Si tous les masters sont affichés, cache le bouton
         if (currentIndex >= allMasters.length) {
@@ -177,6 +167,7 @@
           allMasters = data; // Stocke tous les masters récupérés
           loadMasters(9); // Charge les 9 premiers masters (3 lignes)
         })
+        // Si une erreur se produit lors de la récupération des données, affiche un message d'erreur
         .catch((error) => {
           console.error('Erreur:', error);
           mastersContainer.innerHTML = `<p class="text-red-500 text-center">Impossible de charger les données des masters. Veuillez réessayer plus tard.</p>`;
