lien img bg menu

--- a/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/header.html
+++ b/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/header.html
@@ -35,17 +35,17 @@
                 class="transition duration-150 hidden absolute z-10 top-10 left-[-16px] font-bold bg-gray-800 shadow-lg rounded-b-3xl w-[100vw] p-4 pt-10 lg:hidden">
                 <div class="liens">
                     <a href="./index.html" class="flex items-center px-4 text-white hover:bg-gray-100">
-                        <img src="./css/img/003-home.png" alt="Home"
+                        <img src="../img/003-home.png" alt="Home"
                             class="w-5 h-5 mr-3">
                         ACCUEIL
                     </a>
                     <a href="./lesMasters.html" class="flex items-center px-4 text-white hover:bg-gray-100">
-                        <img src="./css/img/002-mortarboard.png" alt="Masters"
+                        <img src="../img/002-mortarboard.png" alt="Masters"
                             class="w-5 h-5 mr-3">
                         MASTERS
                     </a>
                     <a href="./lesEtablissements.html" class="flex items-center px-4 text-white hover:bg-gray-100">
-                        <img src="./css/img/001-old-building.png" alt="Establishments"
+                        <img src="../img/001-old-building.png" alt="Establishments"
                             class="w-5 h-5 mr-3">
                         ÉTABLISSEMENTS
                     </a>
